[gd_scene load_steps=2 format=3 uid="uid://c4ie2q1d8qerb"]

[ext_resource type="Script" path="res://pages/mission_editor/editor_entities/editor_entity.gd" id="1_ycfje"]

[node name="EditorEntity" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ycfje")

[node name="Hitbox" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="button_down" from="Hitbox" to="." method="_on_hitbox_button_down"]
[connection signal="button_up" from="Hitbox" to="." method="_on_hitbox_button_up"]
[connection signal="pressed" from="Hitbox" to="." method="_on_hitbox_pressed"]
